--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header col-12">
-        <h1 align="center">KOTASTU</h1>
+        <h1 align="center">FOOT MOUSE</h1>
     </header>
 
     <h1 class="control col-12">Control Device</h1>
@@ -51,7 +51,7 @@
             <button onclick="stopDevice()" class='stoptime col-4'>CLEAR</button>
         </div>
         <div class="footer">
-            <p>KOTASTU is a product for people with hand disabilities</p>
+            <p>FOOT MOUSE is a product for people with hand disabilities</p>
         </div>
     </div>
 </body>
